Migrations Edited - Added UID to TransactionsTable

--- a/Views/Shared/_LayoutGame.cshtml
+++ b/Views/Shared/_LayoutGame.cshtml
@@ -99,7 +99,7 @@
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="@Url.Action("Profile", "Game")">Edit Profile</a>
-                                        <a class="dropdown-item" href="@Url.Action("Balance", "Game")">Balance</a>
+                                        <a class="dropdown-item" href="@Url.Action("Wallet", "Game")">Wallet</a>
                                         <li>
                                             <hr class="dropdown-divider">
                                         </li>
