--- a/wwwroot/Game_Template/css/style.css
+++ b/wwwroot/Game_Template/css/style.css
@@ -7,6 +7,12 @@
   background-image: -o-linear-gradient(right, #ff0000 0%, #c6019a 51%, #ff0000 100%);
   background-image: linear-gradient(to left, #ff0000 0%, #c6019a 51%, #ff0000 100%);
 }
+.btn_1, .live_stareams .live_stareams_slide .live_stareams_slide_img:after, .Latest_War .Latest_War_text:after, .gallery_part .single_gallery_item .single_gallery_item_iner:after, .footer_part .single_footer_part .mail_part .email_icon {
+  background-image: -webkit-gradient(linear, right top, left top, from(#ff0000), color-stop(51%, #c6019a), to(#ff0000));
+  background-image: -webkit-linear-gradient(right, #ff0000 0%, #c6019a 51%, #ff0000 100%);
+  background-image: -o-linear-gradient(right, #ff0000 0%, #c6019a 51%, #ff0000 100%);
+  background-image: linear-gradient(to left, #ff0000 0%, #c6019a 51%, #ff0000 100%);
+}
 
 /* line 8, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_extends.scss */
 .main_menu .main-menu-item .nav-item a:before {
@@ -2959,6 +2965,13 @@ ul {
 /* line 54, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_Latest_War.scss */
 .Latest_War .Latest_War_bg_1 {
   background-image: url("../img/latest_war_img_1.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.Latest_War .Latest_War_bg_2 {
+  background-image: url("../img/latest_war_img_2.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
