Funtionality Partial Added, Rebranded UI

--- a/wwwroot/Game_Template/css/style.css
+++ b/wwwroot/Game_Template/css/style.css
@@ -2197,6 +2197,7 @@ ul {
 .main_menu .navbar-brand {
   padding-top: 0rem;
   padding-bottom: 0px;
+  font-size: x-large;
 }
 
 /* line 14, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
