--- a/Views/Game/Contact.cshtml
+++ b/Views/Game/Contact.cshtml
@@ -59,9 +59,9 @@
                             </div>
                             <span class="invalid-feedback" id="subjectError"></span>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 mt-2">
                             <div class="form-group">
-                                <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"
+                                <textarea style="resize: none;" class="form-control w-100" name="message" id="message" cols="30" rows="9"
                                     onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'"
                                     placeholder='Enter Message'></textarea>
                             </div>
