--- a/Views/Game/PlayGame.cshtml
+++ b/Views/Game/PlayGame.cshtml
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 text-center mb-4">
-                <h2 class="contact-title">💎 MINES 💎</h2>
+                <h2 class="contact-title">💎 MINE RUSH 💎</h2>
             </div>
 
             <div class="col-lg-10">
@@ -34,9 +34,10 @@
 
                     <!-- Left Controls Column -->
                     <div class="col-md-4 controls-column">
-                        <div class="mb-4">
+
+                        <div class="mb-0">
                             <h4 class="text-center mb-3">Bet Amount</h4>
-                            <select class="form-select mb-4">
+                            <select class="form-select mb-3">
                                 <option>$1</option>
                                 <option>$5</option>
                                 <option>$10</option>
@@ -57,8 +58,14 @@
                                 <option>18</option>
                             </select>
                         </div>
+
+                        <div class="mb-4">
+                            <h4 class="text-center mb-3">Profit</h4>
+                            <input class="form-select" value="0" readonly>
+                        </div>
                         
-                        <button class="cashout-btn">CASH OUT 💵</button>
+                        <button class="btn_1 p-3 w-100">Start Game</button>
+                        @* <button class="cashout-btn p-3 w-100 border-0">Cashout</button> *@
                     </div>
 
                     <!-- Right Game Grid -->
@@ -67,7 +74,7 @@
                             <div class="grid-container">
                                 @for (int i = 0; i < 25; i++)
                                 {
-                                    <button class="mine-btn" data-index="@i">❓</button>
+                                    <button class="mine-btn disabled" data-index="@i">❓</button>
                                 }
                             </div>
                         </div>
