--- a/Views/Shared/_LayoutGame.cshtml
+++ b/Views/Shared/_LayoutGame.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mines | @ViewData["Title"]</title>
     <!-- LOGO ICON -->
-    <link rel="icon" href="~/Game_Template/img/favicon.png">
+    <link rel="icon" href="~/Logos/logo-3-w/icon1.png">
     <!-- Scollbar CSS -->
     <link rel="stylesheet" href="~/css/scroll-bar-custom.css">
     <!-- Bootstrap CSS -->
@@ -58,8 +58,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="@Url.Action("Home", "Game")">
-                                <img src="~/Game_Template/img/logo.png" alt="logo"> </a>
+                            <a class="navbar-brand mr-0" href="@Url.Action("Home", "Game")">
+                                <img src="~/Logos/logo-3-b/icon4b.png" alt="logo"> MineRush</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -126,9 +126,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
-                            <div class="single_footer_part">
-                                <a href="@Url.Action("Home", "Game")" class="footer_logo_iner"> <img
-                                        src="~/Game_Template/img/logo.png" alt="#"> </a>
+                            <div class="single_footer_part text-white">
+                                <a href="@Url.Action("Home", "Game")" class="footer_logo_iner" style="margin-bottom: 30px;"> 
+                                    <img src="~/Logos/logo-3-b/icon3.png" class="mb-0" alt="footer-logo"> MineRush</a>
                                 <p>Heaven fruitful doesn't over lesser days appear creeping seasons so behold bearing
                                     days
                                     open
@@ -164,14 +164,12 @@
                                     open
                                 </p>
                                 <div id="mc_embed_signup">
-                                    <form target="_blank"
-                                        action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                        method="get" class="subscribe_form relative mail_part">
+                                    <form method="get" class="subscribe_form relative mail_part">
                                         <input type="email" name="email" id="newsletter-form-email"
                                             placeholder="Email Address" class="placeholder hide-on-focus"
                                             onfocus="this.placeholder = ''"
                                             onblur="this.placeholder = ' Email Address '">
-                                        <button type="submit" name="submit" id="newsletter-submit"
+                                        <button type="button" name="submit" id="newsletter-submit"
                                             class="email_icon newsletter-submit button-contactForm"><i
                                                 class="far fa-paper-plane"></i></button>
                                         <div class="mt-10 info"></div>
