Final Touches (1) | Added Login button UI, edited _layout

--- a/Views/Game/Register.cshtml
+++ b/Views/Game/Register.cshtml
@@ -13,6 +13,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="~/css/input-text-color.css">
+    <link rel="stylesheet" href="~/css/login-btn.css">
 }
 
 <!-- breadcrumb start-->
@@ -86,6 +87,9 @@
                     </div>
                     <div class="form-group mt-3">
                         <button type="button" class="w-100 disabled btn_1" id="registerBtn">Register</button>
+                    </div>
+                    <div class="form-group mt-3">
+                        <a href="@Url.Action("Login", "Game")" class="w-100 login-btn">Login</a>
                     </div>
                 </form>
             </div>
