--- a/Views/Shared/_LayoutGame.cshtml
+++ b/Views/Shared/_LayoutGame.cshtml
@@ -120,10 +120,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
-                            <div class="single_footer_part text-white">
-                                <a href="@Url.Action("Home", "Game")" class="footer_logo_iner" style="margin-bottom: 30px;"> 
+                            <div class="single_footer_part">
+                                <a href="@Url.Action("Home", "Game")" class="footer_logo_iner text-white" style="font-size: 20px;"> 
                                     <img src="~/Logos/logo-3-b/icon3.png" class="mb-0" alt="footer-logo"> MineRush</a>
-                                <p>Heaven fruitful doesn't over lesser days appear creeping seasons so behold bearing
+                                <p style="margin-top: 30px;">Heaven fruitful doesn't over lesser days appear creeping seasons so behold bearing
                                     days
                                     open
                                 </p>
