--- a/Views/Shared/_LayoutGame.cshtml
+++ b/Views/Shared/_LayoutGame.cshtml
@@ -52,7 +52,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand mr-0" href="@Url.Action("Home", "Game")">
+                            <a class="navbar-brand mr-0 text-white" href="@Url.Action("Home", "Game")">
                                 <img src="~/Logos/logo-3-b/icon4b.png" alt="logo"> MineRush</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
